--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
     "@edx/frontend-component-footer": "^10.2.4",
     "@edx/frontend-enterprise-catalog-search": "3.0.3",
+    "@edx/frontend-enterprise-hotjar": "1.2.0",
     "@edx/frontend-enterprise-logistration": "^2.0.0",
     "@edx/frontend-enterprise-utils": "^2.0.0",
-    "@edx/frontend-enterprise-hotjar": "1.2.0",
     "@edx/frontend-platform": "^1.15.6",
     "@edx/paragon": "^19.15.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
@@ -53,7 +53,7 @@
     "universal-cookie": "4.0.4"
   },
   "devDependencies": {
-    "@edx/frontend-build": "9.2.0",
+    "@edx/frontend-build": "^12.0.0",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "3.7.0",
