--- a/.env.development
+++ b/.env.development
@@ -43,3 +43,4 @@ LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
 FEATURE_ENABLE_PATHWAYS='true'
 FEATURE_ENROLL_WITH_ENTERPRISE_OFFERS='true'
+FEATURE_ENABLE_PATHWAY_PROGRESS='true'
