--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "16.14.0",
     "react-fullstory": "1.4.0",
     "react-helmet": "5.2.1",
+    "react-icons": "^4.4.0",
     "react-instantsearch-dom": "6.8.2",
     "react-intl": "^5.21.1",
     "react-loading-skeleton": "2.1.1",
