--- a/.env.development
+++ b/.env.development
@@ -1,15 +1,14 @@
-BASE_URL='http://localhost:8734'
-LMS_BASE_URL='http://localhost:18000'
-ECOMMERCE_BASE_URL='http://localhost:18130'
-DISCOVERY_API_BASE_URL='http://localhost:18381'
-ENTERPRISE_ACCESS_BASE_URL='http://localhost:18270'
-ENTERPRISE_CATALOG_API_BASE_URL='http://localhost:18160'
-LICENSE_MANAGER_URL='http://localhost:18170'
+BASE_URL='http://test-enterprise.localhost:8734'
+LMS_BASE_URL='http://test-enterprise.localhost:18000'
+ECOMMERCE_BASE_URL='http://test-enterprise.localhost:18130'
+DISCOVERY_API_BASE_URL='http://test-enterprise.localhost:18381'
+ENTERPRISE_ACCESS_BASE_URL='http://test-enterprise.localhost:18270'
+ENTERPRISE_CATALOG_API_BASE_URL='http://test-enterprise.localhost:18160'
 MARKETING_SITE_BASE_URL='https://stage.edx.org'
-LOGIN_URL='http://localhost:18000/login'
-LOGOUT_URL='http://localhost:18000/logout'
+LOGIN_URL='http://test-enterprise.localhost:18000/login'
+LOGOUT_URL='http://test-enterprise.localhost:18000/logout'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
-REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
+REFRESH_ACCESS_TOKEN_ENDPOINT='http://test-enterprise.localhost:18000/login_refresh'
 ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
 USER_INFO_COOKIE_NAME='edx-user-info'
 INTEGRATION_WARNING_DISMISSED_COOKIE_NAME='integration-warning-dismissed'
