--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@edx/frontend-enterprise-hotjar": "1.2.0",
     "@edx/frontend-enterprise-logistration": "^2.0.0",
     "@edx/frontend-enterprise-utils": "^2.0.0",
+    "@edx/frontend-enterprise-toasts": "^0.1.0",
     "@edx/frontend-platform": "^1.15.6",
     "@edx/paragon": "^19.15.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
