--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
     "@edx/frontend-component-footer": "^10.2.4",
-    "@edx/frontend-enterprise-catalog-search": "3.0.3",
+    "@edx/frontend-enterprise-catalog-search": "3.1.3",
     "@edx/frontend-enterprise-hotjar": "1.2.0",
     "@edx/frontend-enterprise-logistration": "^2.0.0",
     "@edx/frontend-enterprise-utils": "2.2.0",
     "@edx/frontend-platform": "^2.6.2",
-    "@edx/paragon": "^19.15.0",
+    "@edx/paragon": "^20.0.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
@@ -40,7 +40,7 @@
     "react-fullstory": "1.4.0",
     "react-helmet": "5.2.1",
     "react-instantsearch-dom": "^6.8.2",
-    "react-intl": "^5.21.1",
+    "react-intl": "^5.25.0",
     "react-loading-skeleton": "^3.1.0",
     "react-parallax": "^3.3.0",
     "react-redux": "7.2.2",
@@ -62,6 +62,7 @@
     "@testing-library/user-event": "^13.5.0",
     "acorn": "^8.5.0",
     "axios-mock-adapter": "1.19.0",
+    "@edx/browserslist-config": "^1.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "match-media-mock": "0.1.1",
