--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,7 @@ jobs:
       run: npm run test
     - name: Build
       run: npm run build
+    - name: Upload Coverage
+      uses: codecov/codecov-action@v3
+      with:
+        fail_ci_if_error: false
