--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
+APP_ID='learner-portal-enterprise'
+MFE_CONFIG_API_URL='http://localhost:18000/api/mfe_config/v1'
 NODE_ENV='development'
 BASE_URL='http://localhost:8734'
 LMS_BASE_URL='http://localhost:18000'
