--- a/package.json
+++ b/package.json
@@ -57,8 +57,11 @@
     "react-truncate": "2.4.0",
     "redux": "4.0.5",
     "reselect": "4.0.0",
+    "start": "5.1.0",
     "universal-cookie": "4.0.4",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "video.js": "8.3.0",
+    "videojs-youtube": "3.0.1"
   },
   "devDependencies": {
     "@edx/browserslist-config": "1.1.1",
