--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 DISCOVERY_API_BASE_URL='http://localhost:18381'
 ENTERPRISE_ACCESS_BASE_URL='http://localhost:18270'
+ENTERPRISE_SUBSIDY_BASE_URL='http://localhost:18280'
 ENTERPRISE_CATALOG_API_BASE_URL='http://localhost:18160'
 LICENSE_MANAGER_URL='http://localhost:18170'
 MARKETING_SITE_BASE_URL='https://stage.edx.org'
@@ -52,3 +53,4 @@ FEATURE_ENABLE_PATHWAY_PROGRESS='true'
 GETSMARTER_STUDENT_TC_URL='https://www.getsmarter.com/terms-and-conditions-for-students'
 GETSMARTER_PRIVACY_POLICY_URL='https://www.getsmarter.com/privacy-policy'
 FEATURE_CONTENT_HIGHLIGHTS='true'
+FEATURE_ENABLE_EMET_REDEMPTION='true'
