--- a/.env.development
+++ b/.env.development
@@ -44,6 +44,7 @@ FEATURE_PROGRAM_TYPE_FACET='true'
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
 LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
+LEARNER_SUPPORT_SPEND_ENROLLMENT_LIMITS_URL='http://edx.org'
 FEATURE_ENABLE_PATHWAYS='true'
 FEATURE_ENABLE_COURSE_REVIEW=''
 FEATURE_ENROLL_WITH_ENTERPRISE_OFFERS='true'
