--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
-    "@edx/frontend-component-footer": "^12.0.0",
-    "@edx/frontend-enterprise-catalog-search": "^4.0.0",
-    "@edx/frontend-enterprise-hotjar": "^1.3.0",
-    "@edx/frontend-enterprise-logistration": "^3.0.0",
-    "@edx/frontend-enterprise-utils": "^3.0.0",
-    "@edx/frontend-platform": "^4.2.0",
-    "@edx/paragon": "^20.31.1",
+    "@edx/frontend-component-footer": "12.0.0",
+    "@edx/frontend-enterprise-catalog-search": "4.0.0",
+    "@edx/frontend-enterprise-hotjar": "1.3.0",
+    "@edx/frontend-enterprise-logistration": "3.0.0",
+    "@edx/frontend-enterprise-utils": "3.0.0",
+    "@edx/frontend-platform": "4.2.0",
+    "@edx/paragon": "20.36.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
@@ -38,6 +38,7 @@
     "lodash.capitalize": "4.2.1",
     "lodash.clonedeep": "4.5.0",
     "lodash.debounce": "4.0.8",
+    "lodash.isnil": "4.0.0",
     "moment": "2.29.1",
     "plotly.js-dist": "2.17.0",
     "prop-types": "15.7.2",
