--- a/.env.development
+++ b/.env.development
@@ -52,5 +52,6 @@ FEATURE_ENROLL_WITH_ENTERPRISE_OFFERS='true'
 FEATURE_ENABLE_PATHWAY_PROGRESS='true'
 GETSMARTER_STUDENT_TC_URL='https://www.getsmarter.com/terms-and-conditions-for-students'
 GETSMARTER_PRIVACY_POLICY_URL='https://www.getsmarter.com/privacy-policy'
+GETSMARTER_LEARNER_DASHBOARD_URL='https://www.getsmarter.com/account'
 FEATURE_CONTENT_HIGHLIGHTS='true'
 FEATURE_ENABLE_EMET_REDEMPTION='true'
