--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@edx/frontend-enterprise-logistration": "3.0.0",
     "@edx/frontend-enterprise-utils": "3.0.0",
     "@edx/frontend-platform": "4.2.0",
-    "@edx/paragon": "20.36.0",
+    "@edx/paragon": "^20.44.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
@@ -72,10 +72,10 @@
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "3.7.0",
     "@testing-library/user-event": "13.5.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "acorn": "8.5.0",
     "axios-mock-adapter": "1.19.0",
     "enzyme": "3.11.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "jest-canvas-mock": "^2.4.0",
     "match-media-mock": "0.1.1",
     "prettier": "2.2.1",
