--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-parallax": "3.3.0",
     "react-redux": "7.2.2",
     "react-router": "4.3.1",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^6.0.0",
     "react-router-hash-link": "2.3.1",
     "react-scroll": "1.8.4",
     "react-string-replace": "1.1.0",
@@ -94,7 +94,7 @@
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack-dev-server --progress",
-    "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
+    "test": "fedx-scripts jest --passWithNoTests --maxWorkers=50%",
     "test:watch": "npm run test -- --watch",
     "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save"
   },
