--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-scroll": "1.8.4",
     "react-string-replace": "1.1.0",
     "react-transition-group": "4.4.1",
-    "react-truncate": "2.4.0",
+    "react-lines-ellipsis": "0.15.3",
     "redux": "4.0.5",
     "reselect": "4.0.0",
     "start": "5.1.0",
