--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack-dev-server --progress",
-    "test": "fedx-scripts jest --coverage --passWithNoTests --runInBand",
+    "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=2 --runInBand",
     "test:watch": "npm run test -- --watch",
     "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save",
     "serve": "fedx-scripts serve"
