--- a/package.json
+++ b/package.json
@@ -89,8 +89,7 @@
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:with-theme": "paragon install-theme && npm start",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
-    "test:watch": "npm run test -- --watch",
-    "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save"
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
