--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
     "@edx/frontend-component-footer": "12.0.0",
-    "@edx/frontend-enterprise-catalog-search": "4.4.0",
+    "@edx/frontend-enterprise-catalog-search": "4.7.0",
     "@edx/frontend-enterprise-hotjar": "1.3.0",
     "@edx/frontend-enterprise-logistration": "3.0.0",
     "@edx/frontend-enterprise-utils": "3.0.0",
-    "@edx/frontend-platform": "4.2.0",
-    "@edx/paragon": "20.45.1",
+    "@edx/frontend-platform": "4.6.3",
+    "@edx/paragon": "21.1.6",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
     "algoliasearch": "4.6.0",
@@ -80,17 +80,16 @@
   "license": "AGPL-3.0",
   "scripts": {
     "build": "fedx-scripts webpack",
-    "build:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack",
+    "build:with-theme": "paragon install-theme && npm run build",
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
     "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx .",
     "precommit": "npm run lint",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
-    "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack-dev-server --progress",
+    "start:with-theme": "paragon install-theme && npm start",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
-    "test:watch": "npm run test -- --watch",
-    "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save"
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
