--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
     "@edx/frontend-component-footer": "12.2.0",
-    "@edx/frontend-enterprise-catalog-search": "5.0.0",
+    "@edx/frontend-enterprise-catalog-search": "5.4.0",
     "@edx/frontend-enterprise-hotjar": "2.0.0",
-    "@edx/frontend-enterprise-logistration": "4.0.0",
-    "@edx/frontend-enterprise-utils": "4.0.0",
+    "@edx/frontend-enterprise-logistration": "4.0.4",
+    "@edx/frontend-enterprise-utils": "4.0.4",
     "@edx/frontend-platform": "5.5.4",
-    "@edx/paragon": "20.45.4",
+    "@edx/paragon": "^21.5.3",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
     "algoliasearch": "4.6.0",
