--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "extends @edx/browserslist-config"
   ],
   "dependencies": {
-    "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
+    "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
     "@edx/frontend-component-footer": "12.2.0",
     "@edx/frontend-enterprise-catalog-search": "5.4.0",
     "@edx/frontend-enterprise-hotjar": "2.0.0",
