chore: Update to the new version of brand-openedx in the new scope.
Part of https://github.com/openedx/axim-engineering/issues/23

This updates the `@edx/brand` alias to point to the `brand-openedx` package at
the `openedx` scope. This does not impact imports because this package is used
via an alias.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "extends @edx/browserslist-config"
   ],
   "dependencies": {
-    "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
+    "@edx/brand": "npm:@openedx/brand-openedx@1.2.2",
     "@edx/frontend-component-footer": "12.1.2",
     "@edx/frontend-enterprise-catalog-search": "4.7.1",
     "@edx/frontend-enterprise-hotjar": "1.4.0",
