--- a/.env.development
+++ b/.env.development
@@ -56,3 +56,4 @@ GETSMARTER_PRIVACY_POLICY_URL='https://www.getsmarter.com/privacy-policy'
 GETSMARTER_LEARNER_DASHBOARD_URL='https://www.getsmarter.com/account'
 FEATURE_CONTENT_HIGHLIGHTS='true'
 FEATURE_ENABLE_EMET_REDEMPTION='true'
+FEATURE_ENABLE_TOP_DOWN_ASSIGNMENT='true'
