--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ FEATURE_ENABLE_PATHWAYS=true
 FEATURE_ENABLE_COURSE_REVIEW=false
 FEATURE_ENABLE_PATHWAY_PROGRESS='true'
 FEATURE_ENABLE_MY_CAREER='true'
+FEATURE_ENABLE_TOP_DOWN_ASSIGNMENT='true'
