--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "enzyme": "3.11.0",
     "jest-canvas-mock": "^2.4.0",
     "match-media-mock": "0.1.1",
+    "mockdate": "3.0.5",
     "prettier": "2.2.1",
     "react-test-renderer": "17.0.2",
     "resize-observer-polyfill": "^1.5.1"
