--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "mockdate": "3.0.5",
     "prettier": "2.2.1",
     "react-test-renderer": "17.0.2",
+    "reactifex": "^1.1.1",
     "resize-observer-polyfill": "^1.5.1"
   },
   "keywords": [],
