--- a/.env.development
+++ b/.env.development
@@ -35,6 +35,7 @@ FEATURE_LANGUAGE_FACET='true'
 IS_MAINTENANCE_ALERT_ENABLED=''
 MAINTENANCE_ALERT_MESSAGE=''
 MAINTENANCE_ALERT_START_TIMESTAMP=''
+HIDE_USERNAME_FROM_HEADER=''
 HOTJAR_APP_ID=''
 HOTJAR_VERSION=6
 HOTJAR_DEBUG=''
