--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dompurify": "2.3.6",
     "email-prop-type": "1.1.7",
     "formik": "2.2.9",
+    "glob": "10.3.10",
     "history": "4.10.1",
     "iso-639-1": "2.1.4",
     "lodash.camelcase": "4.3.0",
@@ -36,6 +37,7 @@
     "lodash.isnil": "4.0.0",
     "plotly.js-dist": "2.17.0",
     "prop-types": "15.7.2",
+    "purgecss-webpack-plugin": "5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-fullstory": "1.4.0",
