--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash.clonedeep": "4.5.0",
     "lodash.debounce": "4.0.8",
     "lodash.isnil": "4.0.0",
+    "nprogress": "^0.2.0",
     "plotly.js-dist": "2.17.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
