--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "enzyme": "3.11.0",
     "jest-canvas-mock": "2.4.0",
     "jest-fetch-mock": "3.0.3",
+    "jest-when": "^3.6.0",
     "match-media-mock": "0.1.1",
     "mockdate": "3.0.5",
     "prettier": "2.2.1",
