--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@openedx/paragon": "^21.5.7",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
+    "accessible-nprogress": "2.1.2",
     "algoliasearch": "4.6.0",
     "axios": "0.21.1",
     "classnames": "2.2.6",
@@ -34,7 +35,6 @@
     "lodash.clonedeep": "4.5.0",
     "lodash.debounce": "4.0.8",
     "lodash.isnil": "4.0.0",
-    "nprogress": "^0.2.0",
     "plotly.js-dist": "2.17.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
