--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@edx/frontend-enterprise-utils": "6.0.0",
     "@edx/frontend-platform": "7.1.0",
     "@loadable/component": "5.16.3",
+    "@lukemorales/query-key-factory": "1.3.4",
     "@openedx/paragon": "^21.5.7",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
