--- a/package.json
+++ b/package.json
@@ -71,13 +71,15 @@
     "acorn": "8.5.0",
     "axios-mock-adapter": "1.19.0",
     "enzyme": "3.11.0",
-    "jest-canvas-mock": "^2.4.0",
+    "jest-canvas-mock": "2.4.0",
+    "jest-fetch-mock": "3.0.3",
+    "jest-when": "3.6.0",
     "match-media-mock": "0.1.1",
     "mockdate": "3.0.5",
     "prettier": "2.2.1",
     "react-test-renderer": "17.0.2",
-    "reactifex": "^1.1.1",
-    "resize-observer-polyfill": "^1.5.1"
+    "reactifex": "1.1.1",
+    "resize-observer-polyfill": "1.5.1"
   },
   "keywords": [],
   "license": "AGPL-3.0",
